Adding grafana dashboards

--- a/apps/grafana/app.yml
+++ b/apps/grafana/app.yml
@@ -11,55 +11,79 @@ spec:
   destination:
     server: https://kubernetes.default.svc
     namespace: monitoring
-  source:
-    repoURL: https://grafana.github.io/helm-charts
-    chart: grafana
-    targetRevision: 8.6.2
-    helm:
-      values: |
-        adminUser: admin
-        adminPassword: "admin"
+  sources:
+    - repoURL: https://grafana.github.io/helm-charts
+      chart: grafana
+      targetRevision: 8.6.2
+      helm:
+        values: |
+          adminUser: admin
+          adminPassword: "admin"
 
-        server:
-          persistence:
-            enabled: true
-            size: 5Gi
-            storageClass: longhorn
+          server:
+            persistence:
+              enabled: true
+              size: 5Gi
+              storageClass: longhorn
 
-        service:
-          type: ClusterIP
-          port: 80
+          service:
+            type: ClusterIP
+            port: 80
 
-        datasources:
-          datasources.yaml:
-            apiVersion: 1
-            datasources:
-              - name: Prometheus
-                type: prometheus
-                access: proxy
-                isDefault: true
-                url: http://prometheus-server.monitoring.svc.cluster.local
+          dashboardProviders:
+              dashboardproviders.yaml:
+                  apiVersion: 1
+                  providers:
+                      - name: 'default'
+                        orgId: 1
+                        folder: 'General'
+                        type: file
+                        disableDeletion: true
+                        editable: true
+                        options:
+                            path: /var/lib/grafana/dashboards/default
+
+          sidecar:
+              dashboards:
+                  enabled: true
+                  label: grafana_dashboard
+                  searchNamespace: ALL
+                  provider:
+                      foldersFromFilesStructure: false
+
+          datasources:
+            datasources.yaml:
+              apiVersion: 1
+              datasources:
+                - name: Prometheus
+                  type: prometheus
+                  access: proxy
+                  isDefault: true
+                  url: http://prometheus-server.monitoring.svc.cluster.local
 
         # Ingress per Traefik (K3s)
-        ingress:
-          enabled: true
-          ingressClassName: traefik
-          annotations:
-            traefik.ingress.kubernetes.io/router.entrypoints: websecure
-            traefik.ingress.kubernetes.io/router.tls: "true"
-          path: /
-          pathType: Prefix
-          hosts:
-            - grafana.192.168.1.14.nip.io
-          tls:
-            - secretName: grafana-tls
-              hosts:
-                - grafana.192.168.1.14.nip.io
+          ingress:
+            enabled: true
+            ingressClassName: traefik
+            annotations:
+              traefik.ingress.kubernetes.io/router.entrypoints: websecure
+              traefik.ingress.kubernetes.io/router.tls: "true"
+            path: /
+            pathType: Prefix
+            hosts:
+              - grafana.192.168.1.14.nip.io
+            tls:
+              - secretName: grafana-tls
+                hosts:
+                  - grafana.192.168.1.14.nip.io
 
-        persistence:
-          enabled: false
-        testFramework:
-          enabled: false
+          persistence:
+            enabled: false
+          testFramework:
+            enabled: false
+    - repoURL: https://github.com/bruli/k3s-infra.git
+          targetRevision: main
+          path: apps/grafana/dashboards
   syncPolicy:
     automated:
       prune: true
