--- a/apps/grafana/app.yml
+++ b/apps/grafana/app.yml
@@ -1,4 +1,3 @@
----
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
@@ -11,7 +10,10 @@ spec:
   destination:
     server: https://kubernetes.default.svc
     namespace: monitoring
+
+  # MULTI-SOURCE correcte
   sources:
+    # 1) Helm chart de Grafana
     - repoURL: https://grafana.github.io/helm-charts
       chart: grafana
       targetRevision: 8.6.2
@@ -20,37 +22,40 @@ spec:
           adminUser: admin
           adminPassword: "admin"
 
-          server:
-            persistence:
-              enabled: true
-              size: 5Gi
-              storageClass: longhorn
+          # Persistència al top-level del chart (no dins "server")
+          persistence:
+            enabled: true
+            size: 5Gi
+            storageClassName: longhorn
 
           service:
             type: ClusterIP
             port: 80
 
+          # Providers de dashboards
           dashboardProviders:
-              dashboardproviders.yaml:
-                  apiVersion: 1
-                  providers:
-                      - name: 'default'
-                        orgId: 1
-                        folder: 'General'
-                        type: file
-                        disableDeletion: true
-                        editable: true
-                        options:
-                            path: /var/lib/grafana/dashboards/default
+            dashboardproviders.yaml:
+              apiVersion: 1
+              providers:
+                - name: 'default'
+                  orgId: 1
+                  folder: 'General'
+                  type: file
+                  disableDeletion: true
+                  editable: true
+                  options:
+                    path: /var/lib/grafana/dashboards/default
 
+          # Sidecar de dashboards
           sidecar:
-              dashboards:
-                  enabled: true
-                  label: grafana_dashboard
-                  searchNamespace: ALL
-                  provider:
-                      foldersFromFilesStructure: false
+            dashboards:
+              enabled: true
+              label: grafana_dashboard
+              searchNamespace: ALL
+              provider:
+                foldersFromFilesStructure: false
 
+          # Datasource Prometheus (verifica el nom del servei)
           datasources:
             datasources.yaml:
               apiVersion: 1
@@ -61,7 +66,7 @@ spec:
                   isDefault: true
                   url: http://prometheus-server.monitoring.svc.cluster.local
 
-        # Ingress per Traefik (K3s)
+          # Ingress per Traefik (K3s)
           ingress:
             enabled: true
             ingressClassName: traefik
@@ -77,13 +82,15 @@ spec:
                 hosts:
                   - grafana.192.168.1.14.nip.io
 
-          persistence:
-            enabled: false
+          # Opcional (algunes versions del chart el porten)
           testFramework:
             enabled: false
+
+    # 2) Manifests (Kustomize) dels dashboards del teu repo
     - repoURL: https://github.com/bruli/k3s-infra.git
-          targetRevision: main
-          path: apps/grafana/dashboards
+      targetRevision: main
+      path: apps/grafana/dashboards
+
   syncPolicy:
     automated:
       prune: true
