--- a/apps/grafana/dashboards/kustomization.yaml
+++ b/apps/grafana/dashboards/kustomization.yaml
@@ -1,15 +1,14 @@
----
 namespace: monitoring
 
 generatorOptions:
   disableNameSuffixHash: true
   labels:
-    grafana_dashboard: "1"
+    grafana_dashboard: "1"   # <-- ha de quadrar amb sidecar.dashboards.label
   annotations:
     k8s-sidecar-target-directory: "/var/lib/grafana/dashboards/default"
 
 configMapGenerator:
   - name: grafana-dashboards
     files:
-      - pinger.json
       - cluster.json
+      - pinger.json
