--- a/apps/grafana/dashboards-app.yaml
+++ b/apps/grafana/dashboards-app.yaml
@@ -1,3 +1,4 @@
+---
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
@@ -12,6 +13,7 @@ spec:
     repoURL: https://github.com/bruli/k3s-infra.git
     targetRevision: main
     path: apps/grafana/dashboards
+    kustomize: {}   # força el renderer de Kustomize
   syncPolicy:
     automated:
       prune: true
