--- a/apps/grafana/app.yml
+++ b/apps/grafana/app.yml
@@ -44,6 +44,7 @@ spec:
           dashboards:
             enabled: true
             label: grafana_dashboard
+            labelValue: "1"
             searchNamespace: ALL
             provider:
               foldersFromFilesStructure: false
