--- a/apps/grafana/dashboards-app.yaml
+++ b/apps/grafana/dashboards-app.yaml
@@ -1,11 +1,8 @@
 ---
 apiVersion: argoproj.io/v1alpha1
 kind: Application
-metadata:
-  name: grafana-dashboards
-  namespace: argocd
-# annotations:
-#   k8s-sidecar-target-directory: "/var/lib/grafana/dashboards"
+annotations:
+  k8s-sidecar-target-directory: "/var/lib/grafana/dashboards"
 spec:
   project: default
   destination:
