--- a/apps/grafana/app.yml
+++ b/apps/grafana/app.yml
@@ -46,6 +46,7 @@ spec:
             label: grafana_dashboard
             labelValue: "1"
             searchNamespace: ALL
+            folder: /var/lib/grafana/dashboards
             provider:
               foldersFromFilesStructure: false
             securityContext:
@@ -87,13 +88,13 @@ spec:
 
         extraInitContainers:
           - name: create-dashboards-dir
-            image: busybox
+            image: docker.io/library/busybox:1.36
             command:
               - sh
               - -c
               - mkdir -p /var/lib/grafana/dashboards && chown -R 472:472 /var/lib/grafana
             securityContext:
-              runAsUser: 0
+              runAsUser: 0  
             volumeMounts:
               - name: storage
                 mountPath: /var/lib/grafana
