--- a/apps/grafana/app.yml
+++ b/apps/grafana/app.yml
@@ -94,7 +94,7 @@ spec:
               - -c
               - mkdir -p /var/lib/grafana/dashboards && chown -R 472:472 /var/lib/grafana
             securityContext:
-              runAsUser: 0  
+              runAsUser: 0
             volumeMounts:
               - name: storage
                 mountPath: /var/lib/grafana
@@ -108,6 +108,10 @@ spec:
         securityContext:
           runAsUser: 472
           runAsGroup: 472
+
+        deploymentStrategy:
+          type: Recreate
+
 
   syncPolicy:
     automated:
