--- a/apps/grafana/dashboards/kustomization.yaml
+++ b/apps/grafana/dashboards/kustomization.yaml
@@ -11,3 +11,6 @@ configMapGenerator:
     files:
       - cluster.json
       - pinger.json
+      - kubernetes-cluster.json
+      - node-exporter.json
+      - longhorn.json
