--- a/apps/grafana/app.yaml
+++ b/apps/grafana/app.yaml
@@ -34,7 +34,7 @@ spec:
                 orgId: 1
                 folder: Provisioned
                 type: file
-                disableDeletion: true
+                disableDeletion: false
                 editable: true
                 updateIntervalSeconds: 30
                 options:
