--- a/apps/grafana/app.yaml
+++ b/apps/grafana/app.yaml
@@ -1,8 +1,11 @@
+---
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: grafana
   namespace: argocd
+  labels:
+    app.kubernetes.io/part-of: monitoring
 spec:
   project: default
   destination:
@@ -17,32 +20,15 @@ spec:
         adminUser: admin
         adminPassword: "admin"
 
-        persistence:
-          enabled: true
-          size: 5Gi
-          storageClassName: longhorn
+        server:
+          persistence:
+            enabled: true
+            size: 5Gi
+            storageClass: longhorn
 
         service:
           type: ClusterIP
           port: 80
-
-        dashboardProviders:
-          dashboardproviders.yaml:
-            apiVersion: 1
-            providers:
-              - name: default
-                orgId: 1
-                folder: Provisioned
-                type: file
-                disableDeletion: false
-                editable: true
-                updateIntervalSeconds: 30
-                options:
-                  path: /var/lib/grafana/dashboards/default
-
-        # Muntar directament el ConfigMap com a dashboards (sense sidecar)
-        dashboardsConfigMaps:
-          default: grafana-dashboards
 
         datasources:
           datasources.yaml:
@@ -54,6 +40,7 @@ spec:
                 isDefault: true
                 url: http://prometheus-server.monitoring.svc.cluster.local
 
+        # Ingress per Traefik (K3s)
         ingress:
           enabled: true
           ingressClassName: traefik
@@ -69,14 +56,14 @@ spec:
               hosts:
                 - grafana.192.168.1.14.nip.io
 
+        persistence:
+          enabled: false
         testFramework:
           enabled: false
-
-        deploymentStrategy:
-          type: Recreate
   syncPolicy:
     automated:
       prune: true
       selfHeal: true
     syncOptions:
       - CreateNamespace=true
+      - ApplyOutOfSyncOnly=true
