--- a/apps/grafana/app.yaml
+++ b/apps/grafana/app.yaml
@@ -42,7 +42,7 @@ spec:
             providers:
               - name: default
                 orgId: 1
-                folder: Provisioned
+                folder: ""
                 type: file
                 disableDeletion: false
                 editable: true
