--- a/apps/nats/app.yaml
+++ b/apps/nats/app.yaml
@@ -12,12 +12,12 @@ spec:
     repoURL: https://nats-io.github.io/k8s/helm/charts
     chart: nats
     targetRevision: 2.12.1
-    helm:
-      releaseName: nats
-      values: |
-        nats:
-          jetstream:
-            enabled: true
+#     helm:
+#       releaseName: nats
+#       values: |
+#         nats:
+#           jetstream:
+#             enabled: true
   syncPolicy:
     automated:
       prune: true
