--- a/infra/nats-exporter/deployment.yaml
+++ b/infra/nats-exporter/deployment.yaml
@@ -23,7 +23,7 @@ spec:
             - "-subz"
             - "-a=0.0.0.0"             # bind explícit
             - "-p=7777"                # port explícit
-            - "http://nats.nats.svc.cluster.local:8222"  # URL base
+            - "http://nats-headless.nats.svc.cluster.local:8222"  # URL base
           ports:
             - name: metrics
               containerPort: 7777
