--- a/apps/nats-exporter/app.yaml
+++ b/apps/nats-exporter/app.yaml
@@ -2,7 +2,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: cloudflared
+  name: nats-exporter
   namespace: argocd
   labels:
     app.kubernetes.io/part-of: monitoring
