--- a/apps/kube-prometheus-stack/app.yaml
+++ b/apps/kube-prometheus-stack/app.yaml
@@ -6,36 +6,21 @@ metadata:
   labels:
     app.kubernetes.io/part-of: monitoring
 spec:
-  project: default
-  destination:
-    server: https://kubernetes.default.svc
-    namespace: monitoring
   source:
     repoURL: https://prometheus-community.github.io/helm-charts
     chart: kube-prometheus-stack
     targetRevision: 79.4.0
     helm:
+      skipCrds: false
       values: |
-        # Evita problemes típics i duplicats
         prometheus-pushgateway:
-          enabled: false    # Desactiva si no el fas servir
-
-        nodeExporter:
-          tolerations:
-            - operator: "Exists"   # perquè corri també en nodes amb taints
-          # (opcional) sense hostPort per evitar col·lisions:
-          hostNetwork: false
-          service:
-            hostPort: false
-
-        kube-state-metrics:
-          tolerations:
-            - operator: "Exists"
-
+          enabled: false
   syncPolicy:
     automated:
       prune: true
       selfHeal: true
     syncOptions:
       - CreateNamespace=true
-      - ApplyOutOfSyncOnly=true
+      - ServerSideApply=true
+      - Replace=true
+      - PruneLastAppliedConfiguration=true
