--- a/apps/prometheus/app.yaml
+++ b/apps/prometheus/app.yaml
@@ -1,4 +1,3 @@
----
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
@@ -18,22 +17,28 @@ spec:
     helm:
       values: |
         server:
-            persistentVolume:
-                enabled: true
-                size: 20Gi
-                storageClass: longhorn
+          persistentVolume:
+            enabled: true
+            size: 20Gi
+            storageClass: longhorn
+
+          # 👇 Carrega arxius extra de scrape_configs
+          scrapeConfigFiles:
+            - nats-exporter.yml
+
         alertmanager:
           enabled: false
         pushgateway:
           enabled: false
-        serverFiles:
-            prometheus.yml:
-                scrape_configs:
-                    - job_name: 'nats-exporter'
-                    static_configs:
-                        - targets:
-                            - 'nats-exporter-prometheus-nats-exporter.monitoring.svc.cluster.local:7777'
 
+        # 👇 Contingut del fitxer extra
+        serverFiles:
+          nats-exporter.yml: |
+            - job_name: 'nats-exporter'
+              metrics_path: /metrics
+              static_configs:
+                - targets:
+                    - 'nats-exporter-prometheus-nats-exporter.monitoring.svc.cluster.local:7777'
   syncPolicy:
     automated:
       prune: true
