--- a/apps/grafana-dashboards/dashboard-alerter.yaml
+++ b/apps/grafana-dashboards/dashboard-alerter.yaml
@@ -619,7 +619,7 @@ data:
         ],
         "preload": false,
         "schemaVersion": 40,
-        "tags": [],
+        "tags": ["apps"],
         "templating": {
             "list": [
                 {
