--- a/apps/grafana-dashboards/dashboard-nats.yaml
+++ b/apps/grafana-dashboards/dashboard-nats.yaml
@@ -907,12 +907,7 @@ data:
       "preload": false,
       "refresh": "10s",
       "schemaVersion": 40,
-      "tags": [
-        "nats",
-        "exporter",
-        "prometheus",
-        "k8s"
-      ],
+      "tags": ["nats"],
       "templating": {
         "list": [
           {
