--- a/apps/grafana-dashboards/dashboard-nats.yaml
+++ b/apps/grafana-dashboards/dashboard-nats.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     grafana_dashboard: "1"
 data:
-  cluster-overview.json: |-
+  nats-overview.json: |-
     {
       "annotations": {
         "list": [
